no longer default linking bootstrap component

--- a/sw/projects/cmem_to_flash_vector/CMakeLists.txt
+++ b/sw/projects/cmem_to_flash_vector/CMakeLists.txt
@@ -16,36 +16,12 @@ add_executable(cmem_to_flash_vector
       ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/vectors.S)
 
 #Externally define some linker symbols: _start, __cmem_size and __dmem_size.
+#0x11400000 is SPI Flash User Memory, offset 0x40000 to skip over the space
+#reserved for the bitsream.
 target_link_options(cmem_to_flash_vector
     PRIVATE
       "LINKER:--defsym=_start=0x11400000"
-      "LINKER:--defsym=__cmem_size=${CMEM_SIZE}"
-      "LINKER:--defsym=__dmem_size=${DMEM_SIZE}"
-      "LINKER:--gc-sections"
-      -T${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld
-      "LINKER:--Map,${CMAKE_CURRENT_BINARY_DIR}/cmem_to_flash_vector.map"
 )
 
-#.mem and .bin file generation commands.
-# Note that the generated .mem file is copied to cmem.mem in the source tree!
-add_custom_command(
-    TARGET
-      cmem_to_flash_vector
-    POST_BUILD
-    COMMAND
-      ${CMAKE_OBJCOPY} -O verilog --interleave-width=4 --interleave=4 --byte=0 cmem_to_flash_vector cmem_to_flash_vector.hex
-    COMMAND
-      ${CMAKE_OBJCOPY} -O binary cmem_to_flash_vector cmem_to_flash_vector.bin
-    COMMAND
-      ${PROJECT_SOURCE_DIR}/sub/ibex_wb/scripts/hex2vmem.pl < cmem_to_flash_vector.hex > cmem_to_flash_vector.mem
-    COMMAND
-      cp cmem_to_flash_vector.mem ${CMAKE_CURRENT_LIST_DIR}/cmem.mem
-    WORKING_DIRECTORY
-      ${CMAKE_CURRENT_BINARY_DIR}
-    BYPRODUCTS
-      cmem_to_flash_vector.hex cmem_to_flash_vector.mem
-    COMMENT
-      "Converting executable to mem and bin."
-    VERBATIM
-)
+link_and_create_image(cmem_to_flash_vector ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
