--- a/sw/projects/ddr_test/CMakeLists.txt
+++ b/sw/projects/ddr_test/CMakeLists.txt
@@ -17,7 +17,7 @@ target_compile_options(ddr_test_ram
 #Function defined in parent CMakeLists.txt file:
 link_and_create_image(ddr_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(ddr_test_ram sdram gpio riscv)
+target_link_libraries(ddr_test_ram sdram gpio riscv bootstrap)
 
 #
 # DDR Test Flash build
@@ -38,7 +38,7 @@ target_compile_options(ddr_test_flsh
 #Function defined in parent CMakeLists.txt file:
 link_and_create_image(ddr_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(ddr_test_flsh sdram gpio riscv)
+target_link_libraries(ddr_test_flsh sdram gpio riscv bootstrap)
 
 add_flash_sw_target(ddr_test_flsh)
 
