--- a/sw/projects/i2c_test/CMakeLists.txt
+++ b/sw/projects/i2c_test/CMakeLists.txt
@@ -15,7 +15,7 @@ target_compile_options(i2c_test_ram
 link_and_create_image(i2c_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(i2c_test_ram sdram i2c gpio embedded_cli riscv interrupts peek_poke_cli)
+target_link_libraries(i2c_test_ram sdram i2c gpio embedded_cli riscv interrupts peek_poke_cli bootstrap)
 
 #
 # I2C Test Flash Build
@@ -34,6 +34,6 @@ target_compile_options(i2c_test_flsh
 link_and_create_image(i2c_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(i2c_test_flsh sdram i2c gpio embedded_cli riscv interrupts peek_poke_cli)
+target_link_libraries(i2c_test_flsh sdram i2c gpio embedded_cli riscv interrupts peek_poke_cli bootstrap)
 
 add_flash_sw_target(i2c_test_flsh)
