--- a/sw/projects/j1b_test/CMakeLists.txt
+++ b/sw/projects/j1b_test/CMakeLists.txt
@@ -24,7 +24,7 @@ target_include_directories(j1b_test_ram
 link_and_create_image(j1b_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(j1b_test_ram sdram gpio riscv j1b_hal)
+target_link_libraries(j1b_test_ram sdram gpio riscv j1b_hal bootstrap)
 
 #Flash image variant
 add_executable(j1b_test_flsh
@@ -45,7 +45,7 @@ target_include_directories(j1b_test_flsh
 link_and_create_image(j1b_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(j1b_test_flsh gpio riscv j1b_hal)
+target_link_libraries(j1b_test_flsh gpio riscv j1b_hal bootstrap)
 
 add_flash_sw_target(j1b_test_flsh)
 
