--- a/sw/projects/reset_test/CMakeLists.txt
+++ b/sw/projects/reset_test/CMakeLists.txt
@@ -18,7 +18,7 @@ target_include_directories(reset_test_ram
 link_and_create_image(reset_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(reset_test_ram sdram gpio riscv)
+target_link_libraries(reset_test_ram sdram gpio riscv bootstrap)
 
 #Reset test program - Flash Build
 
@@ -40,6 +40,6 @@ target_include_directories(reset_test_flsh
 link_and_create_image(reset_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(reset_test_flsh sdram gpio riscv)
+target_link_libraries(reset_test_flsh sdram gpio riscv bootstrap)
 
 add_flash_sw_target(reset_test_flsh)
