--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -19,7 +19,7 @@ target_include_directories(ym2149_test_ram
 #Function defined in parent CMakeLists.txt file:
 link_and_create_image(ym2149_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(ym2149_test_ram gpio riscv)
+target_link_libraries(ym2149_test_ram gpio riscv bootstrap)
 
 #
 # YM2149 Test - Flash Build
@@ -42,6 +42,6 @@ target_include_directories(ym2149_test_flsh
 #Function defined in parent CMakeLists.txt file:
 link_and_create_image(ym2149_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(ym2149_test_flsh gpio riscv)
+target_link_libraries(ym2149_test_flsh gpio riscv bootstrap)
 
 add_flash_sw_target(ym2149_test_flsh)
