--- a/sw/projects/dfx_test/CMakeLists.txt
+++ b/sw/projects/dfx_test/CMakeLists.txt
@@ -33,7 +33,7 @@ target_include_directories(dfx_test_flsh
 link_and_create_image(dfx_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(dfx_test_flsh sdram gpio embedded_cli riscv interrupts peek_poke_cli j1b_hal fatfs ymodem_cli mem_fs_cli dfx)
+target_link_libraries(dfx_test_flsh sdram gpio embedded_cli riscv interrupts peek_poke_cli j1b_hal fatfs ymodem_cli mem_fs_cli dfx bootstrap)
 
 add_flash_sw_target(dfx_test_flsh)
 
@@ -58,5 +58,5 @@ target_include_directories(dfx_test_ram
 link_and_create_image(dfx_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(dfx_test_ram sdram gpio embedded_cli riscv interrupts peek_poke_cli j1b_hal fatfs ymodem_cli mem_fs_cli dfx)
+target_link_libraries(dfx_test_ram sdram gpio embedded_cli riscv interrupts peek_poke_cli j1b_hal fatfs ymodem_cli mem_fs_cli dfx bootstrap)
 
