--- a/sw/projects/rtcc_test/CMakeLists.txt
+++ b/sw/projects/rtcc_test/CMakeLists.txt
@@ -16,7 +16,7 @@ target_compile_options(rtcc_test_ram
 link_and_create_image(rtcc_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(rtcc_test_ram sdram rtcc i2c gpio riscv embedded_cli peek_poke_cli)
+target_link_libraries(rtcc_test_ram sdram rtcc i3c gpio riscv embedded_cli peek_poke_cli bootstrap)
 
 target_include_directories(rtcc_test_ram
     PUBLIC
@@ -41,7 +41,7 @@ target_compile_options(rtcc_test_flsh
 link_and_create_image(rtcc_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(rtcc_test_flsh sdram rtcc i2c gpio riscv embedded_cli peek_poke_cli)
+target_link_libraries(rtcc_test_flsh sdram rtcc i2c gpio riscv embedded_cli peek_poke_cli bootstrap)
 
 target_include_directories(rtcc_test_flsh
     PUBLIC
