--- a/sw/projects/vera_test/CMakeLists.txt
+++ b/sw/projects/vera_test/CMakeLists.txt
@@ -14,7 +14,7 @@ target_compile_options(vera_test_ram
 #Function defined in parent CMakeLists.txt file:
 link_and_create_image(vera_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(vera_test_ram vera sdram gpio riscv interrupts)
+target_link_libraries(vera_test_ram vera sdram gpio riscv interrupts bootstrap)
 
 #
 # VERA Test- Flash Build
@@ -32,6 +32,6 @@ target_compile_options(vera_test_flsh
 #Function defined in parent CMakeLists.txt file:
 link_and_create_image(vera_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(vera_test_flsh vera sdram gpio riscv interrupts)
+target_link_libraries(vera_test_flsh vera sdram gpio riscv interrupts bootstrap)
 
 add_flash_sw_target(vera_test_flsh)
