--- a/gw/projects/usb_hid_sys_test/Bender.yml
+++ b/gw/projects/usb_hid_sys_test/Bender.yml
@@ -38,7 +38,7 @@ sources:
       DEBUG_MODULE_ACTIVE: ~
       #YM2149: ~
       #SDSPI: ~
-      #DRAM: ~
+      DRAM: ~
       #VERA: ~
       #PICORV_DMA: ~
       USB_HID: ~
