disabled branch target alu again due to timing closure issues

--- a/gw/projects/sdspi_test/Bender.yml
+++ b/gw/projects/sdspi_test/Bender.yml
@@ -22,7 +22,7 @@ sources:
       DEBUG_MODULE_ACTIVE: ~
       #YM2149: ~
       SDSPI: ~
-      #DRAM: ~
+      DRAM: ~
       #VERA: ~
       #PICORV_DMA: ~
       #TRACE_ALL_INSTRUCTIONS: ~
@@ -36,7 +36,7 @@ sources:
       DEBUG_MODULE_ACTIVE: ~
       #YM2149: ~
       SDSPI: ~
-      #DRAM: ~
+      DRAM: ~
       #VERA: ~
       #PICORV_DMA: ~
       #TRACE_ALL_INSTRUCTIONS: ~
