--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ MarkupSafe==3.0.2
 mergedeep==1.3.4
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
+mkdocs-glightbox==0.4.0
 mkdocs-material==9.6.1
 mkdocs-material-extensions==1.3.1
 packaging==24.2
