--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ extra_javascript:
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 theme:
-    name: material
+    name: readthedocs
     collapse_navigation: True
     titles_only: False
     logo: assets/boxlambda_logo_simple_white.png
