arty_a7 build tree default builds boxlamdbda_base and _dfx only

--- a/gw/components/picorv_dma/CMakeLists.txt
+++ b/gw/components/picorv_dma/CMakeLists.txt
@@ -1,13 +1,14 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE  picorv_dma_top
-    COMPONENT_NAME picorv_dma 
+    COMPONENT_NAME picorv_dma
 )
 
 #This is a dummy target. It doesn't build anything. It just collects the picorv test programs
 #as dependencies for the testcase below. Sadly, add_test() doesn't have a DEPENDS attribute.
 #This means you need to run 'make picorv_dma_test', before running ctest.
-add_custom_target(picorv_dma_test ALL
+add_custom_target(picorv_dma_test
+        ALL
         WORKING_DIRECTORY
             ${CMAKE_CURRENT_BINARY_DIR}
         COMMENT
