--- a/gw/projects/boxlambda_base/CMakeLists.txt
+++ b/gw/projects/boxlambda_base/CMakeLists.txt
@@ -10,5 +10,8 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
       PROJECT_NAME boxlambda_base
       MEM_FILE_TARGET cmem_to_flash_vector
   )
+
+  add_custom_target(boxlambda_base_all_wrapper ALL)
+  add_dependencies(boxlambda_base_all_wrapper boxlambda_base_bit)
 endif()
 
