--- a/gw/projects/spiflash_test/CMakeLists.txt
+++ b/gw/projects/spiflash_test/CMakeLists.txt
@@ -1,7 +1,8 @@
 #This is a dummy target. It doesn't build anything. It just collects the spiflash_test
 #sw executable as a dependency for the testcase below. Sadly, add_test() doesn't have a DEPENDS attribute.
 #This means you need to run 'make spiflash_test_collect', before running ctest.
-add_custom_target(spiflash_test_collect ALL
+add_custom_target(spiflash_test_collect
+        ALL
         WORKING_DIRECTORY
             ${CMAKE_CURRENT_BINARY_DIR}
         COMMENT
@@ -25,8 +26,8 @@ else()
       PROJECT_NAME spiflash_test
       MEM_FILE_TARGET cmem_to_flash_vector
       VERILATOR_FLAGS
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/"
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
           "-CFLAGS -I${PROJECT_SOURCE_DIR}/gw/components/spiflash/sim/"
   )
 
