--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -117,7 +117,7 @@ add_subdirectory(ibex)
 add_subdirectory(reset_ctrl)
 add_subdirectory(picorv_dma)
 add_subdirectory(boxlambda_clk_gen)
-add_subdirectory(wbxbar)
+add_subdirectory(interconnect)
 add_subdirectory(wb_dp_ram)
 add_subdirectory(boxlambda_soc)
 add_subdirectory(vs0_stub)
