--- a/gw/components/interconnect/CMakeLists.txt
+++ b/gw/components/interconnect/CMakeLists.txt
@@ -1,7 +1,7 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE wbxbar_ooc
-    COMPONENT_NAME wbxbar
+    COMPONENT_NAME interconnect
 )
 
 add_test(NAME wb_staller_test
