--- a/sw/projects/dual_port_ram_test/CMakeLists.txt
+++ b/sw/projects/dual_port_ram_test/CMakeLists.txt
@@ -7,10 +7,6 @@ add_executable(dual_port_ram_test_ram
  dual_port_ram_test.c
 )
 
-#Dependency on two PicoRV test assembly programs
-add_dependencies(dual_port_ram_test_ram
- picorv_wordcopy_burst)
-
 target_compile_options(dual_port_ram_test_ram
  PRIVATE
   -O2 -g
@@ -19,13 +15,12 @@ target_compile_options(dual_port_ram_test_ram
 target_include_directories(dual_port_ram_test_ram
     PRIVATE
   ${CMAKE_CURRENT_BINARY_DIR}
-  ${CMAKE_BINARY_DIR}/sw/components/picorv_dma/test/
 )
 
 link_and_create_image(dual_port_ram_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(dual_port_ram_test_ram picorv_dma gpio riscv bootstrap)
+target_link_libraries(dual_port_ram_test_ram gpio riscv bootstrap)
 
 #
 # Dual Port RAM test Flash build
@@ -35,10 +30,6 @@ add_executable(dual_port_ram_test_flsh
  dual_port_ram_test.c
 )
 
-#Dependency on two PicoRV test assembly programs
-add_dependencies(dual_port_ram_test_flsh
- picorv_wordcopy_burst)
-
 target_compile_options(dual_port_ram_test_flsh
  PRIVATE
   -O2 -g
@@ -47,12 +38,11 @@ target_compile_options(dual_port_ram_test_flsh
 target_include_directories(dual_port_ram_test_flsh
     PRIVATE
       ${CMAKE_CURRENT_BINARY_DIR}
-      ${CMAKE_BINARY_DIR}/sw/components/picorv_dma/test/
 )
 
 link_and_create_image(dual_port_ram_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(dual_port_ram_test_flsh picorv_dma gpio riscv bootstrap)
+target_link_libraries(dual_port_ram_test_flsh gpio riscv bootstrap)
 
 add_flash_sw_target(dual_port_ram_test_flsh)
