Replaced xbar+shared bus with dual bus. CMEM and DMEM single port.

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -117,7 +117,7 @@ add_subdirectory(ibex)
 add_subdirectory(reset_ctrl)
 add_subdirectory(boxlambda_clk_gen)
 add_subdirectory(interconnect)
-add_subdirectory(wb_dp_ram)
+add_subdirectory(wb_ram)
 add_subdirectory(boxlambda_soc)
 add_subdirectory(vs0_stub)
 add_subdirectory(vs0_j1b)
