--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -458,7 +458,7 @@ add_subdirectory(ym2149_dac_test)
 if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
   add_subdirectory(stsound_test)
 endif()
-add_subdirectory(dual_port_ram_test)
+add_subdirectory(dual_ram_test)
 add_subdirectory(usb_hid_sys_test)
 add_subdirectory(spiflash_test)
 add_subdirectory(timer_uart_gpio_irqs)
