--- a/gw/projects/boxlambda_base/Bender.yml
+++ b/gw/projects/boxlambda_base/Bender.yml
@@ -17,7 +17,7 @@ sources:
   - target: vivado
     defines:
       VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
+      CPU_RAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
@@ -35,7 +35,7 @@ sources:
   - target: verilator
     defines:
       VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
+      CPU_RAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
