--- a/gw/projects/boxlambda_dfx/Bender.yml
+++ b/gw/projects/boxlambda_dfx/Bender.yml
@@ -21,7 +21,7 @@ sources:
   - target: vivado
     defines:
       VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
+      CPU_RAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
@@ -45,7 +45,7 @@ sources:
   - target: verilator
     defines:
       VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
+      CPU_RAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
