--- a/gw/projects/dual_ram_test/Bender.yml
+++ b/gw/projects/dual_ram_test/Bender.yml
@@ -3,7 +3,7 @@
 # Package metadata. Required.
 package:
   # The name of the package. Required.
-  name: dual_port_ram_test
+  name: dual_ram_test
 
 dependencies:
   # Path dependency.
@@ -17,7 +17,7 @@ sources:
   - target: arty-a7-35
     defines:
       VRAM_SIZE_BYTES: 65536
-      DPRAM_SIZE_BYTES: 65536
+      CPU_RAM_SIZE_BYTES: 65536
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
@@ -31,7 +31,7 @@ sources:
   - target: arty-a7-100
     defines:
       VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
+      CPU_RAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
