--- a/gw/components/interconnect/CMakeLists.txt
+++ b/gw/components/interconnect/CMakeLists.txt
@@ -4,3 +4,9 @@ gw_component_rules(
     COMPONENT_NAME interconnect
 )
 
+add_test(NAME wb_arbiter_test
+    COMMAND ${PROJECT_SOURCE_DIR}/scripts/cocotb_test.sh ${CMAKE_CURRENT_LIST_DIR}/test/wb_arbiter_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+
+
