Fix spiflash_test dependency issue.

--- a/gw/projects/spiflash_test/CMakeLists.txt
+++ b/gw/projects/spiflash_test/CMakeLists.txt
@@ -1,17 +1,3 @@
-#This is a dummy target. It doesn't build anything. It just collects the spiflash_test
-#sw executable as a dependency for the testcase below. Sadly, add_test() doesn't have a DEPENDS attribute.
-#This means you need to run 'make spiflash_test_collect', before running ctest.
-add_custom_target(spiflash_test_collect
-        ALL
-        WORKING_DIRECTORY
-            ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT
-            "Dummy target to collect test dependencies."
-        DEPENDS
-            spiflash_test_flsh
-        VERBATIM
-    )
-
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   #gw_project_rules_vivado() function is defined in the parent CMakeLists.txt.
   gw_project_rules_vivado(
@@ -30,6 +16,8 @@ else()
           "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
           "-CFLAGS -I${PROJECT_SOURCE_DIR}/gw/components/spiflash/sim/"
   )
+
+  add_dependencies(spiflash_test_sim_sw spiflash_test_flsh)
 
   #Add testcase.
   add_test(NAME spiflash_test_test
