--- a/gw/projects/boxlambda_base/CMakeLists.txt
+++ b/gw/projects/boxlambda_base/CMakeLists.txt
@@ -8,7 +8,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME boxlambda_base
-      MEM_FILE_TARGET cmem_to_flash_vector
+      MEM_FILE_TARGET imem_to_flash_vector
   )
 
   add_custom_target(boxlambda_base_all_wrapper ALL)
