--- a/gw/components/boxlambda_soc/Bender.yml
+++ b/gw/components/boxlambda_soc/Bender.yml
@@ -7,7 +7,7 @@ package:
 
 dependencies:
   # Path dependency.
-  wb_ram: { path: "../../components/wb_ram" }
+  wb_dp_ram: { path: "../../components/wb_dp_ram" }
   interconnect: { path: "../../components/interconnect" }
   gpio: { path: "../../components/gpio" }
   wbuart: { path: "../../components/wbuart" }
