--- a/gw/projects/rtcc_test/CMakeLists.txt
+++ b/gw/projects/rtcc_test/CMakeLists.txt
@@ -3,6 +3,6 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME rtcc_test
-      MEM_FILE_TARGET cmem_to_flash_vector #rtcc_test_ram
+      MEM_FILE_TARGET imem_to_flash_vector #rtcc_test_ram
   )
 endif()
