--- a/gw/projects/boxlambda_base/CMakeLists.txt
+++ b/gw/projects/boxlambda_base/CMakeLists.txt
@@ -12,6 +12,6 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   )
 
   add_custom_target(boxlambda_base_all_wrapper ALL)
-  add_dependencies(boxlambda_base_all_wrapper boxlambda_base_bit)
+  add_dependencies(boxlambda_base_all_wrapper boxlambda_base_bit_sw)
 endif()
 
