--- a/gw/projects/stsound_test/CMakeLists.txt
+++ b/gw/projects/stsound_test/CMakeLists.txt
@@ -12,14 +12,14 @@ else()
       PROJECT_NAME stsound_test
       MEM_FILE_TARGET stsound_test_ram
       VERILATOR_FLAGS
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/"
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
           "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
   )
 
   #Add testcase. This one's a script, not just the Verilator Vmodel executable.
-  add_test(NAME stsound_test
-      COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/test.sh ${PROJECT_SOURCE_DIR}
-      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-  )
+  #add_test(NAME stsound_test
+  #    COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/test.sh ${PROJECT_SOURCE_DIR}
+  #    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  #)
 endif()
